// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
# prettier-ignore
---
aaaaa:
           bbbbb
...
aaaaa:
           bbbbb

=====================================output=====================================
# prettier-ignore
---
aaaaa:
           bbbbb
---
aaaaa: bbbbb

================================================================================
`;

exports[`leading-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abc:     123
# prettier-ignore
def:     456

=====================================output=====================================
abc: 123
# prettier-ignore
def:     456

================================================================================
`;

exports[`middle-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abc:  !!str #   hello
   123
# prettier-ignore
def:  !!str #   hello
   456

=====================================output=====================================
abc: !!str #   hello
  123
# prettier-ignore
def:  !!str #   hello
   456

================================================================================
`;

exports[`middle-comment-2.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a: &anchor
  # prettier-ignore
  - [1,      2]
  - [1,      2]

b: !!tag
  # prettier-ignore
  - [1,      2]
  - [1,      2]

c:
  - &anchor
    # prettier-ignore
    # another comment
    - [1,      2]
    - [1,      2]

  - !!tag
    # prettier-ignore
    - [1,      2]
    - [1,      2]

  - !!tag
    # prettier-ignore
    key:      value
    key2:      value

d:
  - &parent
    - &child1
      # prettier-ignore
      - [1,      2]
      - [1,      2]
    - &child2
      - [1,      2]
      - [1,      2]

e: &anchor
  # prettier-ignore
  '                             should be ignored'

f: &anchor
  # prettier-ignore
  [   [1,      2], [3,      4]            ]

#9327
prettier_ignore_ignored: &prettier_ignore_ignored
  # prettier-ignore
  -              echo "very very very very very very very very very very very very very very very very very very long line" > /dev/null

=====================================output=====================================
a: &anchor # prettier-ignore
  - [1,      2]
  - [1, 2]

b: !!tag # prettier-ignore
  - [1,      2]
  - [1, 2]

c:
  - &anchor
    # prettier-ignore
    # another comment
    - [1, 2]
    - [1, 2]

  - !!tag # prettier-ignore
    - [1,      2]
    - [1, 2]

  - !!tag # prettier-ignore
    key:      value
    key2: value

d:
  - &parent
    - &child1 # prettier-ignore
      - [1,      2]
      - [1, 2]
    - &child2
      - [1, 2]
      - [1, 2]

e: &anchor # prettier-ignore
  "                             should be ignored"

f: &anchor # prettier-ignore
  [[1,      2], [3, 4]]

#9327
prettier_ignore_ignored: &prettier_ignore_ignored # prettier-ignore
  -              echo "very very very very very very very very very very very very very very very very very very long line" > /dev/null

================================================================================
`;

exports[`trailing-comma.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  # prettier-ignore
             {  sss  },       # 123
    {  qqqq },
  
  # prettier-ignore
          [ccc    ]       # 777
  , [ddd    ]
]

=====================================output=====================================
[
  # prettier-ignore
  {  sss  }, # 123
  { qqqq },

  # prettier-ignore
  [ccc    ], # 777
  [ddd],
]

================================================================================
`;

exports[`trailing-comment.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
abc:     123 # hello
# prettier-ignore
def:     456 # hello

=====================================output=====================================
abc: 123 # hello
# prettier-ignore
def:     456 # hello

================================================================================
`;
